--- a/myapp/templates/myapp/tutor.html
+++ b/myapp/templates/myapp/tutor.html
@@ -9,9 +9,9 @@
     <br>
     <button type="submit">Отправить</button>
 </form>
-    <ul>
-            {% for k, v in context.items %}
-            <li>{{ k }} <a href="{{ v }}">go</a></li>
-            {% endfor %}
-    </ul>
+<!--    <ul>-->
+<!--            {% for k, v in context.items %}-->
+<!--            <li>{{ k }} <a href="{{ v }}">go</a></li>-->
+<!--            {% endfor %}-->
+<!--    </ul>-->
 {% endblock %}
